@@ -15,9 +15,13 @@ liteNormalization <- function(celFiles, destDir, batch_size=40000, verbose=TRUE)
   nfiles <- max((batch_size * 20 * length(celFiles)) %/% nfeat, 1)
 
   ## Determine batches of CEL
-  batches <- split(celFiles, rep(1:length(celFiles), each=nfiles, length.out=length(celFiles)))
-  batches.out <- split(file.path(destDir, "/normalized-", basename(celFiles), fsep=""),
-                       rep(1:length(celFiles), each=nfiles, length.out=length(celFiles)))
+  nCels <- length(celFiles)
+  grps <- rep(1:nCels, each=nfiles, length.out=nCels)
+  batches <- split(celFiles, grps)
+  theFiles <- paste("normalized-", basename(celFiles), sep="")
+  batches.out <- split(file.path(destDir, theFiles), grps)
+  rm(theFiles, nCels, grps)
+  
   if (verbose) message("Preparing environment for normalization.")
   suppressWarnings(createCel(batches.out[[1]][1], header=header))
   if (length(unlist(batches.out))>1)
@@ -29,20 +33,19 @@ liteNormalization <- function(celFiles, destDir, batch_size=40000, verbose=TRUE)
   load(system.file("extdata", paste(pkgname, "Ref.rda", sep=""), package=pkgname))
   reference <- sort(reference)
 
-  txt <- sprintf("Normalization: %06.2f percent done.", 0)
-  if (verbose) cat(txt)
-  del <- paste(rep("\b", nchar(txt)), collapse="", sep="")
+  if (verbose){
+    message("Normalization.")
+    pb <- txtProgressBar(min=1, max=length(batches), style=3, initial=1)
+  }
+
   for (i in 1:length(batches)){
     new <- normalize.quantiles.use.target(readCelIntensities(batches[[i]], indices=fid), reference, copy=FALSE)
     for (j in 1:length(batches[[i]]))
       updateCel(batches.out[[i]][j], indices=fid, intensities=new[,j])
     rm(new)
-    if (verbose){
-      cat(del)
-      cat(sprintf("Normalization: %06.2f percent done.", i/length(batches)*100))
-    }
+    if (verbose) setTxtProgressBar(pb, i)
   }
-  if (verbose) cat("\n")
+  if (verbose) close(pb)
 }
 
 justCRLMM <- function(filenames, batch_size=40000,
@@ -600,12 +603,6 @@ justCRLMMv2 <- function(filenames, tmpdir, batch_size=40000,
     pms <- pms[idx, ]
     dimnames(pms) <- NULL
     theSumm <- basicRMA(pms, pnVec[idx], FALSE, FALSE)
-    
-##     theSumm <- .Call("rma_c_complete_copy", pms, pms,
-##                      pnVec[idx], ngenes,  body(bg.dens),
-##                      new.env(), FALSE, FALSE,
-##                      as.integer(2), PACKAGE="oligo")
-    
     save(theSumm, file=paste(randomName, i, "summ", sep="."))
     sqs <- sqsFrom(theSumm)
 
@@ -660,17 +657,6 @@ justCRLMMv2 <- function(filenames, tmpdir, batch_size=40000,
       LLR <- getAffySnpConfidence(myDist,myCalls,XIndex,maleIndex=NULL,verbose=FALSE)
     }
     save(myDist, myCalls, LLR, file=paste(randomName, i, sep="."))
-    
-##     save(myDist, file=paste(randomName, i, sep="."))
-##     rownames(myCalls) <- rownames(myDist) <- rownames(LLR) <- featureNames(sqs)
-##     colnames(myCalls) <- colnames(myDist) <- colnames(LLR) <- sampleNames(sqs)
-##     write.table(myCalls, file.path(tmpdir, "crlmm-calls.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(myDist, file.path(tmpdir, "crlmm-dist.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(LLR, file.path(tmpdir, "crlmm-llr.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(antisenseThetaA(sqs), file.path(tmpdir, "crlmm-alleleA-antisense.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(antisenseThetaB(sqs), file.path(tmpdir, "crlmm-alleleB-antisense.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(senseThetaA(sqs), file.path(tmpdir, "crlmm-alleleA-sense.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
-##     write.table(senseThetaB(sqs), file.path(tmpdir, "crlmm-alleleB-sense.txt"), append=TRUE, quote=FALSE, sep="\t", col.names=(i==1))
     
     rm(myDist, correction, Index, k, LLR, myCalls, myenv, params, rparams, snpsIn, sqs, XIndex)
     if (verbose){
@@ -735,9 +721,6 @@ justCRLMMv2 <- function(filenames, tmpdir, batch_size=40000,
   colnames(pacc) <- sns
 
   if (verbose) cat("\n")
-  
-##   out <- new("SnpCallSetPlus", calls=finalCalls, callsConfidence=pacc, LLR=finalConfs,
-##              antisenseThetaA=ata, antisenseThetaB=atb, senseThetaA=sta, senseThetaB=stb)
 
   rownames(finalCalls) <- rownames(finalConfs) <- allSnps
   colnames(finalCalls) <- colnames(finalConfs) <- sns
@@ -756,4 +739,164 @@ justCRLMMv2 <- function(filenames, tmpdir, batch_size=40000,
   write.table(stb, file.path(tmpdir, "alleleB-sense.txt"), quote=FALSE, sep="\t", col.names=TRUE)
   rm(stb)
   write.table(snr, file.path(tmpdir, "crlmm-snr.txt"), quote=FALSE, sep="\t", col.names=TRUE, row.names=FALSE)
+}
+
+justCRLMMv3 <- function(filenames, tmpdir, batch_size=40000,
+                        minLLRforCalls=c(5, 1, 5), recalibrate=TRUE,
+                        balance=1.5, verbose=TRUE, pkgname){
+  stopifnot(!(missing(tmpdir)|file.exists(tmpdir)))
+  tmpdir <- gsub("\\/$", "",  tmpdir)
+  
+  ## PHENODATA
+  ## gender is not a key thing here
+  ## algorithm behaves robustly...
+  phenoData <- new("AnnotatedDataFrame",
+                   data=data.frame(gender=rep("female",
+                   length(filenames))))
+  
+  
+  randomName <- tempfile("crlmm.", tmpdir)
+  chips <- sapply(filenames, function(x) readCelHeader(x)$chiptype)
+  if (length(unique(chips)) > 1){
+    print(table(chips))
+    stop("All the CEL files must be of the same type.")
+  }
+  if (missing(pkgname))
+    pkgname <- cleanPlatformName(chips[1])
+  rm(chips)
+  require(pkgname, character.only=TRUE)
+
+  sql.tmp <- "SELECT man_fsetid FROM featureSet WHERE man_fsetid LIKE 'SNP%' AND chrom = 'X'"
+  snps.chrX <- dbGetQuery(db(get(pkgname)), sql.tmp)[[1]]
+  rm(sql.tmp)
+  sns <- basename(filenames)
+  liteNormalization(filenames, destDir=tmpdir, batch_size=batch_size, verbose=verbose)
+  filenames <- file.path(tmpdir, paste("normalized-", basename(filenames), sep=""))
+
+  analysis <- data.frame(v1=c("annotation", "nsamples", "batch_size"),
+                         v2=c(pkgname, length(filenames), batch_size),
+                         stringsAsFactors=FALSE)
+  write.table(analysis, file.path(tmpdir, "analysis.txt"), row.names=FALSE,
+              col.names=FALSE, quote=FALSE)
+
+  snps <- dbGetQuery(db(get(pkgname)), "SELECT man_fsetid FROM featureSet WHERE man_fsetid LIKE 'SNP%' ORDER BY man_fsetid")[[1]]
+  snps <- split(snps, rep(1:length(snps), each=batch_size, length.out=length(snps)))
+
+  bg.dens <- function(x){density(x,kernel="epanechnikov",n=2^14)}
+  theSNR <- matrix(NA, nrow=length(snps), ncol=length(filenames))
+
+  prefix <- "SELECT fid, man_fsetid, pmfeature.allele, pmfeature.strand FROM featureSet, pmfeature WHERE man_fsetid IN ("
+  suffix <- ") AND pmfeature.fsetid = featureSet.fsetid ORDER BY fid"
+  allSnps <- dbGetQuery(db(get(pkgname)), "SELECT man_fsetid FROM featureSet WHERE man_fsetid LIKE 'SNP%' ORDER BY man_fsetid")[[1]]
+
+
+  if (verbose){
+    message("Genotyping.")
+    pb <- txtProgressBar(min=1, max=length(snps), style=3, initial=1)
+  }
+  
+  for (i in 1:length(snps)){
+    mid <- paste("'", snps[[i]],"'",  collapse=", ", sep="")
+    sql <- paste(prefix, mid, suffix)
+    tmp <- dbGetQuery(db(get(pkgname)), sql)
+    pnVec <- paste(tmp[["man_fsetid"]],
+                   c("A", "B")[tmp[["allele"]]+1],
+                   c("S", "A")[tmp[["strand"]]+1], sep="")
+    idx <- order(pnVec)
+    tmp[["man_fsetid"]] <- tmp[["allele"]] <- tmp[["strand"]] <- NULL
+
+    pms <- readCelIntensities(filenames, indices=tmp[["fid"]])
+    pms <- pms[idx, ]
+    dimnames(pms) <- NULL
+    colnames(pms) <- sns
+    theSumm <- basicRMA(pms, pnVec[idx], normalize=FALSE, background=FALSE, verbose=FALSE)
+    colnames(theSumm) <- sns
+    sqs <- sqsFrom(theSumm)
+
+    saveAppendMatrix(antisenseThetaA(sqs),
+                     file.path(tmpdir, "alleleA-antisense.txt"), i)
+    saveAppendMatrix(antisenseThetaB(sqs),
+                     file.path(tmpdir, "alleleB-antisense.txt"), i)
+    saveAppendMatrix(senseThetaA(sqs),
+                     file.path(tmpdir, "alleleA-sense.txt"), i)
+    saveAppendMatrix(senseThetaB(sqs),
+                     file.path(tmpdir, "alleleB-sense.txt"), i)
+
+    annotation(sqs) <- pkgname
+    phenoData(sqs) <- phenoData
+    rm(pms, mid, sql, tmp, pnVec, idx)
+
+    ### TRYING CRLMM HERE
+    correction <- fitAffySnpMixture(sqs, verbose=FALSE)
+    theSNR[i, ] <- correction$snr
+
+    load(system.file(paste("extdata/", pkgname, "CrlmmInfo.rda", sep=""), package=pkgname))
+    myenv <- get(paste(pkgname,"Crlmm",sep="")); rm(list=paste(pkgname,"Crlmm",sep=""))
+    thePriors <- get("priors", myenv)
+    snpsIn <- match(featureNames(sqs), allSnps)
+    myenv$hapmapCallIndex <- myenv$hapmapCallIndex[snpsIn]
+    myenv$params$centers <- myenv$params$centers[snpsIn,,]
+    myenv$params$scales <- myenv$params$scales[snpsIn,,]
+    myenv$params$N <- myenv$params$N[snpsIn,]
+
+    Index <- which(!get("hapmapCallIndex",myenv))
+    myCalls <- matrix(NA,dim(sqs)[1],dim(sqs)[2])
+    myCalls[Index,] <- getInitialAffySnpCalls(correction,Index,verbose=FALSE)
+    rparams <- getAffySnpGenotypeRegionParams(sqs, myCalls, correction$fs,
+                                              subset=Index,verbose=FALSE)
+    oneStrand <- apply(is.na(getM(sqs[,1])[,1,]), 1,
+                       function(v) ifelse(length(ll <- which(v))==0, 0, ll))
+    rparams <- updateAffySnpParams(rparams, thePriors, oneStrand, verbose=FALSE)
+    params  <- replaceAffySnpParams(get("params",myenv), rparams, Index)
+    myDist <- getAffySnpDistance(sqs, params, correction$fs)
+    myDist[,,-2,] <- balance*myDist[,,-2,]
+    
+    XIndex <- which(snps[i] %in% snps.chrX)
+    myCalls <- getAffySnpCalls(myDist,XIndex,maleIndex=NULL,verbose=FALSE)
+    LLR <- getAffySnpConfidence(myDist,myCalls,XIndex,maleIndex=NULL,verbose=FALSE)
+
+    if(recalibrate){
+      for(k in 1:3)
+        myCalls[myCalls == k & LLR < minLLRforCalls[k]] <- NA
+      rm(LLR)
+      myCalls[, theSNR[i,] < 3.675] <- NA
+      rparams <- getAffySnpGenotypeRegionParams(sqs, myCalls,
+                                                correction$fs,
+                                                verbose=FALSE)
+                                                rm(myCalls)
+      rparams <- updateAffySnpParams(rparams, thePriors, oneStrand)
+      myDist <- getAffySnpDistance(sqs, rparams, correction$fs, verbose=FALSE)
+##      save(myDist, file=paste(randomName, "DONT-REMOVEME", i, sep="."))
+      myDist[,,-2,] <- balance*myDist[,,-2,]
+      rm(oneStrand)
+      myCalls <- getAffySnpCalls(myDist,XIndex, maleIndex=NULL, verbose=FALSE)
+      LLR <- getAffySnpConfidence(myDist,myCalls,XIndex,maleIndex=NULL,verbose=FALSE)
+      pacc <- as.matrix(LLR2conf(myCalls, LLR, matrix(theSNR[i,], nrow=1), pkgname))
+      dimnames(myCalls) <- dimnames(LLR) <- dimnames(pacc) <- list(snps[[i]], sns)
+      saveAppendMatrix(myCalls, file.path(tmpdir, "crlmm-calls.txt"), i)
+      saveAppendMatrix(LLR, file.path(tmpdir, "crlmm-llr.txt"), i)
+      saveAppendMatrix(pacc, file.path(tmpdir, "crlmm-conf.txt"), i)
+    }
+    
+    rm(myDist, correction, Index, k, LLR, myCalls, myenv, params, rparams, snpsIn, sqs, XIndex, pacc)
+    if (verbose) setTxtProgressBar(pb, i)
+  }
+  if (verbose) close(pb)
+
+  ## remove normalized CEL
+  cat("Removing temporary files ... ")
+  sapply(list.celfiles(tmpdir, full.names=T), unlink)
+  cat("OK.\n")
+
+  snr <- matrix(exp(colMeans(log(theSNR))), nrow=1)
+  writeBin(as.numeric(snr), file.path(tmpdir, "snr"))
+  colnames(snr) <- sns
+  write.table(snr, file.path(tmpdir, "crlmm-snr.txt"), quote=FALSE, sep="\t", col.names=TRUE, row.names=FALSE)
+}
+
+saveAppendMatrix <- function(x, fname, i){
+  stopifnot(!missing(x), !missing(fname), !missing(i))
+  suppressWarnings(write.table(x, fname, append=TRUE,
+                               quote=FALSE, sep="\t",
+                               col.names=(i==1)))
 }
